Heroku postbuild script added

--- a/package.json
+++ b/package.json
@@ -7,8 +7,9 @@
         "test": "echo \"Error: no test specified\" && exit 1",
         "start": "webpack serve --mode development --open --hot",
         "build": "webpack --mode production",
-        "lint": "eslint src"
-    },
+        "lint": "eslint src",
+        "heroku-postbuild": "NPM_CONFIG_PRODUCTION=false npm install  npm run build"
+      },
     "author": "Alikhan Zhilisbayev <hayemon.filanter@gmail.com>",
     "license": "ISC",
     "dependencies": {
